--- a/frontend/html/main.html
+++ b/frontend/html/main.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+        </style>
+    </head>
+    <body>
+        <script src="test.js"></script>
+        <link rel="stylesheet" href="banner.css">
+        <div style="text-align: center; line-height: 100px;"> 
+            <span style="font-size:4em;  color: black;">안녕 세상!</span>
+        </div>
+        <div id="group">
+            <button id="profile"; onclick="clickProfile()">PROFILE</button>
+            <button id="question"; onclick="clickQuestion()">QUESTION</button>
+            <button id="user"; onclick="clickUser()">USER</button>
+        </div>
+        <div id="sign">
+            <button id="signin"; onclick="clickSignin()">SIGN IN</button>
+            <button id="signup"; onclick="clickSignup()">SIGN UP</button>
+            <button id="forgot"; onclick="clickforgot()">FORGOT?</button>
+        </div>
+    </body>
+</html>
